--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                 </div> <!-- .cd-pricing-body -->
 
                                 <footer class="cd-pricing-footer">
-                                    <a class="cd-select" href="#">Comprar</a>
+                                    <a class="cd-select" href="https://wa.link/id8viu">Comprar</a>
                                 </footer>  <!-- .cd-pricing-footer -->
                             </li>
 
@@ -509,7 +509,7 @@
             <div class="container">
                 <div class="head_title text-center">
                     <h1>Nós vamos te entregar</h1>
-					<p>todo esse univero digital</p>
+					<p>todo esse universo digital</p>
                 </div>
 
                 <div class="row">
@@ -519,7 +519,7 @@
                                 <i class="fa fa-book"></i>
                                 <div class="separator"></div>
                                 <h4>COPYWRITE</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -528,7 +528,7 @@
                                 <i class="fa fa-bug"></i>
                                 <div class="separator"></div>
                                 <h4>ANTI-BLOCK</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -537,7 +537,7 @@
                                 <i class="fa fa-gears"></i>
                                 <div class="separator"></div>
                                 <h4>REVISÃO</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -546,7 +546,7 @@
                                 <i class="fa fa-external-link"></i>
                                 <div class="separator"></div>
                                 <h4>TRÁFEGO DIRETO</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -561,7 +561,7 @@
                                 <i class="fa fa-coffee"></i>
                                 <div class="separator"></div>
                                 <h4>Relatórios Profissionais</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -570,7 +570,7 @@
                                 <i class="fa fa-tree"></i>
                                 <div class="separator"></div>
                                 <h4>Raizes</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -579,7 +579,7 @@
                                 <i class="fa fa-paper-plane-o"></i>
                                 <div class="separator"></div>
                                 <h4>Leads</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
@@ -588,7 +588,7 @@
                                 <i class="fa fa-folder-open"></i>
                                 <div class="separator"></div>
                                 <h4>Tema</h4>
-                                <p>Visually explore your data through a free-form drag-and-drop canvas, a broad range of modern data visualizations, and an easy-to-use report authoring experience.</p>
+                                <p></p>
                             </div>
                         </div>
 
